# offer-hub

./: .coderabbit.yaml  .gitignore  .npmrc  COMMIT_MESSAGE.md  COMMIT_MESSAGES.md  ICON_SYSTEM_USAGE.md  ISSUE_BUILD_FIXES.md  PAYMENT_SECURITY_README.md  PROGRESSIVE_IMAGE_TESTING_SUMMARY.md  PULL_REQUEST.md  RATING_SYSTEM_SUMMARY.md  README.md  WORKFLOW_FEATURE_PROOF.md  eslint.config.mjs  jest.config.js  jest.setup.js  lighthouse.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  test-workflow-api.sh  tsconfig.json
contracts-offerhub/: .gitignore  ACCEPTANCE_CRITERIA_VERIFICATION.md  Cargo.toml  DATA_EXPORT_IMPLEMENTATION.md  FEE_SYSTEM_IMPLEMENTATION.md  INTEGRATION_TESTS_SUMMARY.md  README.md
contracts-offerhub/contracts/dispute-contract/: Cargo.toml  README.md
contracts-offerhub/contracts/emergency-contract/: Cargo.toml
contracts-offerhub/contracts/escrow-contract/: Cargo.toml
contracts-offerhub/contracts/escrow-factory/: Cargo.toml
contracts-offerhub/contracts/fee-manager-contract/: Cargo.toml
contracts-offerhub/contracts/freelancer-registry-contract/: .gitignore  Cargo.toml  DOCUMENTATION.md  Makefile  TEST_DOCUMENTATION.md
contracts-offerhub/contracts/job-posting /: Cargo.toml
contracts-offerhub/contracts/nft-contract/: Cargo.toml  README.md
contracts-offerhub/contracts/proposal/: Cargo.toml
contracts-offerhub/contracts/publication-contract/: Cargo.toml
contracts-offerhub/contracts/rating-contract/: Cargo.toml  README.md
contracts-offerhub/test/: integration.rs  integration_test.rs  rating.rs
(+1733 files in other folders)
