[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "23.0.0-rc.2.4"
rating-contract = { path = "contracts/rating-contract/"}
user-registry-contract = { path = "contracts/user-registry-contract/"}
escrow-contract = { path = "contracts/escrow-contract/"}
dispute-contract = { path = "contracts/dispute-contract/"}
fee-manager-contract = { path = "contracts/fee-manager-contract/"}

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
